--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,14 @@ form button {
     border: none;
     background: white;
 }
+
+form button {
+    color: #fda085;
+    background: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+form button:hover {
+    background: #fda085;
+}
