--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,9 @@ form button:hover {
     background: #fda085;
     color: white;
 }
+
+.todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
