--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
     font-size: 1.5rem;
 }
 
-header,
+header, 
 form {
     min-height: 20vh;
     display: flex;
@@ -23,7 +23,7 @@ form {
     align-items: center;
 }
 
-form input,
+form input, 
 form button {
     padding: 0.5rem;
     font-size: 2rem;
@@ -47,4 +47,37 @@ form button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.todo-list {
+    min-height: 30%;
+    list-style: none;
+}
+
+.todo {
+    margin: 0.5rem;
+    background: white;
+    color: black;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.todo li {
+    flex: 1;
+}
+
+.trash-btn, 
+.complete-btn {
+    background: #ff6f47;
+    color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.complete-btn {
+    background: rgb(73, 204, 73);
 }
