--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,7 @@ select {
 }
 
 
+/* Styles the select buttons structure */
 select::after {
     content: "\25BC";
     position: absolute;
@@ -155,6 +156,7 @@ select::after {
     transition: all 0.3s ease;
 }
 
+/* Styles the select button during a hover event */
 .select:hover::after {
     background: white;
     color: #ff6f47;
