--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
   }
 
-/* Creates the background color */ 
+/* Creates the background color and font */ 
 body {
     background-image: linear-gradient(120deg, #f6d365, #fda085);
     color: white;
