--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,3 +161,25 @@ select::after {
     background: white;
     color: #ff6f47;
 }
+
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    border: 5px solid;
+    border-radius: 50px;
+}
+
+#display {
+    font-size: 5rem;
+    font-family: monospace;
+    font-weight: bold;
+    color: hsl(0, 0%, 30%);
+    text-shadow: 2px 2px 2px hsl(0, 0%, 0%, 0,75%);
+    margin-bottom: 25px;
+}
+
+#controls button {
+    
+}
