--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,8 +190,29 @@ select::after {
     border-radius: 10px;
     cursor: pointer;
     color: white;
+    transition: background-color 0.5s ease;
 }
 
 #startBtn {
     background-color: rgb(73, 204, 73);
+}
+
+#startBtn:hover {
+    background-color: rgb(156, 231, 156);
+}
+
+#stopBtn {
+    background-color: rgb(245, 0, 0);
+}
+
+#stopBtn:hover {
+    background-color: rgb(246, 140, 140);
+}
+
+#resetBtn {
+    background-color: rgb(17, 40, 249);
+}
+
+#resetBtn:hover {
+    background-color: rgb(164, 163, 242);
 }
