--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 /* Creates the background color and font */ 
 body {
-    background-image: linear-gradient(120deg, #e4cdcd, #650404);
+    background-color: #c043af;
     background-size: cover;
     color: black;
     font-family: "Poppins", sans-serif;
@@ -26,15 +26,19 @@ form {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 /* This styles the input text field */
 form input, 
 form button {
     padding: 0.5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: none;
     background: white;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 /* Styles the color of the form button and makes the button look clickable */
@@ -173,12 +177,14 @@ select::after {
 
 /* adjusts the size and color of the numbers in the timer */
 #display {
-    font-size: 5rem;
+    font-size: 2.5rem;
     font-family: monospace;
     font-weight: bold;
     color: black;
     text-shadow: 2px 2px 2px hsl(0, 0%, 0%, 0.75%);
     margin-bottom: 25px;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 /* Adjusts the size and style of the buttons of the timer */
@@ -279,8 +285,6 @@ select::after {
 @media screen and (max-width: 1200px) {    
     /* Reasons section */
     header {
-        justify-content: center;
-        align-items: center;
         font-size: 100%;
     }
 }
@@ -288,8 +292,6 @@ select::after {
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (max-width: 992px) {
     header{
-        justify-content: center;
-        align-items: center;
         font-size: 90%;
     }
 }
@@ -298,9 +300,8 @@ select::after {
 @media screen and (max-width: 768px) {
     /* Header */
     header {
-        justify-content: center;
-        align-items: center;
-        font-size: 85%;
+        
+        font-size: 80%;
     }
 }
 
@@ -308,17 +309,36 @@ select::after {
     /* Media query: large or landscape phones (576px and up) */
 @media screen and (max-width: 576px) {
     header {
-        justify-content: center;
-        align-items: center;
-        font-size: 80%;
+        
+        font-size: 70%;
+    }
+}
+
+@media screen and (min-width: 344px) {
+    header {
+        
+        font-size: 60%;
     }
 }
 
 
-@media screen and (max-width: 344) {
+@media screen and (max-width: 344px) {
     header {
-        justify-content: center;
-        align-items: center;
-        font-size: 80%;
+        
+        font-size: 0.5rem;
+    }
+
+    form input, form button {
+        font-size: 0.5rem;
+    }
+
+    #display {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 189px) {
+    header {
+        font-size: 0.4rem
     }
 }
