--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 /* Creates the background color and font */ 
 body {
-    background-color: #c043af;
+    background-color: #fda5a5;
     background-size: cover;
     color: black;
     font-family: "Poppins", sans-serif;
@@ -17,6 +17,12 @@ body {
 /* Adjusts the text size of the header */
 header {
     font-size: 1.5rem;
+    background: url("../images/disco.jpg") no-repeat center center/cover;
+}
+
+h1 {
+    color: #ffcccc;
+    text-decoration: underline;
 }
 
 /* Centers the header and the form */
@@ -237,7 +243,7 @@ select::after {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-top: -70px;
+    margin-top: -30px;
 }
 
 /* Adjusts the color and padding of the clock */
@@ -264,7 +270,7 @@ select::after {
 
 @media screen and (max-width: 576px) {
     header {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
     }
 
     #controls button {
@@ -281,7 +287,7 @@ select::after {
 
 @media screen and (max-width: 320px) {
     header {
-        font-size: 0.6rem;
+        font-size: 0.75rem;
     }
 
     #controls button {
@@ -296,7 +302,7 @@ select::after {
 @media screen and (max-width: 280px) {
 
     header {
-        font-size: 0.5rem;
+        font-size: 0.65rem;
     }
 
     #display {
