--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,10 @@ body {
 /* Adjusts the text size of the header */
 header {
     font-size: 1.5rem;
-    background: url("../images/disco.jpg") no-repeat center center/cover;
 }
 
 h1 {
-    color: #ffcccc;
+    color: #ffffff;
     text-decoration: underline;
 }
 
@@ -57,7 +56,7 @@ form button {
 
 /* Changes the color of the form button during a hover event */
 form button:hover {
-    background: #7b4141;
+    background: #fac3c3;
     color: black;
 }
 
